Bug : Unit Filters : Remove the default scrollbars show up

--- a/css/pages/section/pricing-section-unit-filter-bubbles.css
+++ b/css/pages/section/pricing-section-unit-filter-bubbles.css
@@ -8,7 +8,7 @@
 	font-size: 0;
 	line-height: 0;
 	white-space: nowrap;
-	overflow-x: scroll;
+	overflow-x: auto;
 	overflow-y: hidden;
 
 	/* -- NOTE | Hindering "background-attachment: local;"  -- */
