--- a/css/pages/section/pricing-section-unit-filter.css
+++ b/css/pages/section/pricing-section-unit-filter.css
@@ -28,7 +28,7 @@
 	z-index: 1;
 	padding: 40px 10px;
 	text-align: center;
-	overflow-x: scroll;
+	overflow-x: auto;
 	overflow-y: hidden;
 	-webkit-overflow-scrolling: touch;
 	-webkit-transform: translateZ(0px);
@@ -71,7 +71,7 @@
 	font-size: 0;
 	line-height: 0;
 	text-align: center;
-	overflow-x: scroll;
+	overflow-x: auto;
 	overflow-y: hidden;
 	-webkit-overflow-scrolling: touch;
 	-webkit-transform: translateZ(0px);
